--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "frontend",
+  "name": "bannerexample",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.22.6",
-    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
+    "antd": "^4.22.6",
+    "axios": "^0.27.2",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
