--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-router-dom": "^6.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start ---mode=development",
     "build": "react-scripts build",
+    "build:production": "env-cmd -f .env.production npm run-script build",
+    "build:test": "env-cmd -f .env.development npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
