--- a/package.json
+++ b/package.json
@@ -9,19 +9,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "antd": "^4.22.6",
-    "axios": "^0.27.2",
-    "socket.io-client": "^4.5.1",
-    "styled-components": "^5.3.5",
-    "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start ---mode=development",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:production": "env-cmd -f .env.production npm run-script build",
-    "build:test": "env-cmd -f .env.development npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
